test/sema/out_param/out_param_field.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
struct S {
  // CHECK: [[# @LINE + 1 ]]:6: error: only parameters can have '*' type
  x: *number,

  // CHECK: [[# @LINE + 1 ]]:6: error: only parameters can have '*' type
  y: **number,
}

fn main() {}
